add missing option to docs

--- a/index.1
+++ b/index.1
@@ -164,6 +164,10 @@ Search. Returns the key for which the product of the counts of all tokens provid
 .PP
 ./"--------------------------------------------------------------------------------------------------------------------------------------------
 .TP \w'\fB\-T\fP<file>'u+3n
+.BR \-C <num>
+set the number of results to be returned by the Search operation.
+./"--------------------------------------------------------------------------------------------------------------------------------------------
+.TP
 .BR \-f <file>
 set the index file to be operated on by subsequent operations.
 ./"--------------------------------------------------------------------------------------------------------------------------------------------
